Refactor models package and assertions